--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "mocha": "^3.4.2"
+  },
+  "dependencies": {
+    "jssha": "^2.3.1"
   }
 }
