--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.6.0",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.4.2"
   },
   "dependencies": {
