--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/LanceGin/jsotp#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.6.0",
@@ -40,6 +40,7 @@
     "mocha": "^3.4.2"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "jssha": "^2.3.1"
   }
 }
