--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
-    "build": "babel src -d lib",
-    "lint": "eslint src/**.js ; exit 0"
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -34,9 +33,6 @@
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.6.0",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.4.2"
   },
   "dependencies": {
